--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_NAME=Solutech
-#VUE_APP_API_BASE_URL=http://localhost:8000/api/v1/
-VUE_APP_API_BASE_URL=https://api.solutech.millerjuma.co.ke/api/v1/
-#VUE_APP_TEMP_URL=http://localhost:8000/
-VUE_APP_TEMP_URL=https://api.solutech.millerjuma.co.ke/
+VUE_APP_API_BASE_URL=http://localhost:8000/api/v1/
+#VUE_APP_API_BASE_URL=https://api.solutech.millerjuma.co.ke/api/v1/
+VUE_APP_TEMP_URL=http://localhost:8000/
+#VUE_APP_TEMP_URL=https://api.solutech.millerjuma.co.ke/
